--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</div>
 	</div>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 	<script src="virtual-keyboard.js"></script>
 
 <script>
